--- a/assets/p.css
+++ b/assets/p.css
@@ -19,9 +19,17 @@ body {
   font-family: "Roboto", sans-serif;
   color: #111;
   max-width: 800px;
-  margin: 2rem auto;
-  padding: 1rem;
+  margin: 0 auto;
+  padding: 20px;
   background: #f8f8f8;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
 }
 
 #content {
