--- a/assets/p.css
+++ b/assets/p.css
@@ -24,6 +24,12 @@ body {
   background: #f8f8f8;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
 h1 {
   display: inline-block;
   font-size: 20px;
