--- a/assets/p.css
+++ b/assets/p.css
@@ -24,9 +24,10 @@ body {
 }
 
 .container {
+  max-width: 800px;
   display: flex;
   flex-direction: column;
-  margin: 30px auto 0 auto;
+  margin: 0 auto;
 }
 
 h1 {
