--- a/assets/app.css
+++ b/assets/app.css
@@ -160,7 +160,6 @@ button {
 #editor {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 #editor a {
@@ -178,11 +177,12 @@ button {
   color: var(--preto);
   font-size: 18px;
   font-weight: bold;
-  outline: 1px solid transparent;
-  padding: 2px;
-  background-color: transparent;
-  border: none;
-  border-radius: 5px;
+  outline: none;
+  background-color: #f5f5f5;
+  border: 1px solid #c7c7c7;
+  border-radius: 0px;
+  border-bottom: 0px;
+  padding: 5px 10px;
 }
 
 #note-title:hover {
