--- a/assets/p.css
+++ b/assets/p.css
@@ -38,7 +38,7 @@ h1 {
   padding: 4px 7px;
   border: 1px solid #c7c7c7;
   border-bottom: 0px;
-  background-color: #fff;
+  background-color: #f7f7f7;
 }
 
 #content {
