--- a/assets/app.css
+++ b/assets/app.css
@@ -202,6 +202,7 @@ button {
   cursor: auto;
   background-color: transparent;
   resize: both;
+  margin-bottom: 20px;
 }
 
 #editor textarea::placeholder {
