--- a/assets/app.css
+++ b/assets/app.css
@@ -179,14 +179,18 @@ button {
   font-weight: bold;
   outline: none;
   background-color: #f7f7f7;
-  border: 1px solid #c7c7c7;
+  border-top: 1px solid transparent;
+  border-bottom: 0px;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
   border-radius: 0px;
   border-bottom: 0px;
   padding: 5px 10px;
 }
 
 #note-title:focus {
-  background-color: #f0f0f0;
+  border-color: #c7c7c7;
+  background-color: #f7f7f7;
 }
 
 #editor textarea {
