--- a/assets/app.css
+++ b/assets/app.css
@@ -178,7 +178,7 @@ button {
   font-size: 18px;
   font-weight: bold;
   outline: none;
-  background-color: #f7f7f7;
+  background-color: transparent;
   border-top: 1px solid transparent;
   border-bottom: 0px;
   border-left: 1px solid transparent;
