--- a/assets/p.css
+++ b/assets/p.css
@@ -33,10 +33,10 @@ body {
 
 #note-title {
   display: inline-block;
-  font-size: 18px;
+  font-size: 19px;
   margin: 0;
   padding: 5px 0px;
-  font-weight: 700;
+  color: #555;
 }
 
 #content {
