--- a/assets/app.css
+++ b/assets/app.css
@@ -174,7 +174,7 @@ button {
 #note-title {
   width: 100%;
   font-family: var(--fonte);
-  color: var(--preto);
+  color: #555;
   font-size: 18px;
   font-weight: bold;
   outline: none;
@@ -192,6 +192,7 @@ button {
   border-color: #c7c7c7;
   background-color: #f7f7f7;
   padding: 5px 0px 5px 5px;
+  color: var(--preto);
 }
 
 #editor textarea {
