--- a/assets/p.css
+++ b/assets/p.css
@@ -58,7 +58,12 @@ body {
 
 .footer {
   width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
   text-align: center;
+  padding: 20px;
 }
 
 .footer a {
